--- a/blog.forecho.com/价格行为学 - 市场周期.html
+++ b/blog.forecho.com/价格行为学 - 市场周期.html
@@ -1,6 +1,6 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-market-cycle.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-market-cycle.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 AI Brooks 的价格行为学课程的第 12 章内容。</p>
+<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 12 章内容。</p>
 <h2>市场周期的阶段</h2>
 <p>市场周期分为 4 个阶段：</p>
 <ul>
@@ -37,6 +37,7 @@
 <li>可以选择市价单直接下单，也可以等 k 线收盘再下单，也可以使用突破单，随便都可以，关键是要参与。</li>
 <li>可以选择小周期的 k 线图，找回调下单。</li>
 <li>做波段交易（持仓久一点）。新手遇到这种行情很容易止盈太早，他们往往止盈之后很难再次入场，从而错过大行情。</li>
+<li>第一次反转大概率失败。</li>
 </ul>
 <h3>窄通道</h3>
 <p><img alt="" src="https://img.forecho.com/T53wey.png"/></p>
@@ -82,6 +83,7 @@
 <li>与窄通道相比，宽通道的回调持续时间更长，一般是 5～10 根 k 线，甚至有 20 根 k 线</li>
 <li>只要回调小于或者等于 50%，趋势大概率会继续。但是回调了大约 2/3 的时候有 50% 的概率会变成震荡区间或者到了上下各 50% 的概率。</li>
 <li>在小级别的时间周期上，存在震荡区间。</li>
+<li>宽通道是弱趋势，有 75% 的概率被反向突破测试通道起点。</li>
 </ul>
 <p>使用原则：</p>
 <ul>
@@ -127,6 +129,6 @@
 <p>震荡行情比较难做，因为真突破之后可能会导致你大亏，之前小赚的几笔，一次亏完。所以新手要多去做趋势行情，有了经验之后再考虑做震荡行情的剥头皮交易。</p>
 <h2>二元决策</h2>
 <p>我们可以使用二元决策来做交易，当面对行情的时候在 2 个选项中选择一个，迅速根据行情做出决策。</p>
-<p><img alt="057HuF" src="https://img.forecho.com/057HuF.png"/></p>
+<p><img alt="4raPQC" src="https://img.forecho.com/4raPQC.png"/></p>
 <h2>总结</h2>
 <p>市场周期对学习价格行为学非常重要，因为在每个阶段，我们都要使用不同的交易策略，如果你能尽早识别出市场周期，你就能尽早使用正确的交易策略来交易。</p>
