--- a/blog.forecho.com/价格行为学 - 震荡区间.html
+++ b/blog.forecho.com/价格行为学 - 震荡区间.html
@@ -1,6 +1,6 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-trading-range.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-trading-range.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 AI Brooks 的价格行为学课程的第 18 章内容。</p>
+<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 18 章内容。</p>
 <h2>回调和震荡区间</h2>
 <p><img alt="" src="https://img.forecho.com/HsSCf4.png"/></p>
 <h3>回调</h3>
