--- a/f2h2h1.github.io/PHP各种运行方式的不完整总结.html
+++ b/f2h2h1.github.io/PHP各种运行方式的不完整总结.html
@@ -20,6 +20,8 @@
 </li>
 <li>apahce_mod<ul>
 <li>apache 模块，编译时需要有这个参数 --with-apxs2</li>
+<li>apxs 是通过 <code>yum install httpd-devel</code> 或 <code>apt install apache2-dev</code> 安装的</li>
+<li>寻找 apxs 的路径 <code>find / -name apxs</code></li>
 </ul>
 </li>
 <li>fast-cgi<ul>
@@ -41,7 +43,7 @@
 <li>现在使用 iis + php 的组合时通常会用 FastCgiModule 这个模块， php 以 fast-cgi 形式运行</li>
 </ul>
 </li>
-<li>SAPI 还有好几种例如 phpdbg embed 这些 </li>
+<li>SAPI 还有好几种例如 phpdbg embed php-win 这些 </li>
 </ul>
 <p>可以这样查看 php 当前的运行模式</p>
 <pre><code>echo php_sapi_name();
