--- a/f2h2h1.github.io/在Windows下配置PHP服务器.html
+++ b/f2h2h1.github.io/在Windows下配置PHP服务器.html
@@ -312,6 +312,10 @@ sh 下的绝对路径
 <h3>配置 Apache</h3>
 <ol>
 <li>把 Apache 添加进环境变量</li>
+<li><p>配置 php</p>
+<ul>
+<li><p>php_module</p>
+<ol>
 <li>把 php 目录下的 php7apache2_4.dll 复制到 Apache 目录下的 modules</li>
 <li><p>打开 Apache 的配置文件 httpd.conf，往 httpd.conf 里添加 php 的模块，httpd.conf 这个文件在 Apache 安装目录的 conf 文件夹里</p>
 <pre><code class="lang-plaintext"> LoadModule php7_module modules/php7apache2_4.dll
@@ -336,6 +340,29 @@ sh 下的绝对路径
 <li>但 这样的路径却不行 C:/apache/modules/php8apache2_4.dll ，虽然不知道为什么</li>
 </ul>
 </li>
+</ul>
+</li>
+</ul>
+</li>
+</ol>
+</li>
+<li>fast cgi<ul>
+<li>假设使用 mod_proxy_fcgi 模块<ul>
+<li>除了 mod_proxy_fcgi 之外，还有 mod_fcgid 和 mod_fastcgi</li>
+</ul>
+</li>
+<li>把这几行的注释删掉<pre><code>  LoadModule proxy_module modules/mod_proxy.so
+  LoadModule proxy_connect_module modules/mod_proxy_connect.so
+  LoadModule proxy_fcgi_module modules/mod_proxy_fcgi.so
+</code></pre>
+</li>
+<li>然后在配置站点的位置加上<pre><code>  &lt;LocationMatch "^/(.*\.php(/.*)?)$"&gt;
+      ProxyPass fcgi://127.0.0.1:9000/var/www/html/
+  &lt;/LocationMatch&gt;
+</code></pre>
+</li>
+<li>127.0.0.1:9000 是 fast cig 的地址</li>
+<li>/var/www/html/ 是站点根目录</li>
 </ul>
 </li>
 </ul>
