--- a/f2h2h1.github.io/开发Magento2的模块.html
+++ b/f2h2h1.github.io/开发Magento2的模块.html
@@ -3905,6 +3905,44 @@ https://devdocs.magento.com/guides/v2.4/config-guide/cli/config-cli-subcommands-
 https://devdocs.magento.com/guides/v2.4/config-guide/cron/custom-cron.html
 --&gt;
 
+<h3>备份源码和数据库</h3>
+<p>magento2 有备份功能，但已经弃用
+<a href="https://experienceleague.adobe.com/en/docs/commerce-operations/installation-guide/tutorials/backup">https://experienceleague.adobe.com/en/docs/commerce-operations/installation-guide/tutorials/backup</a></p>
+<ul>
+<li>备份源码<ul>
+<li>在 composer.json 里加上这一段<pre><code>"archive": {
+  "exclude": ["var", "generated", "pub/static", ".git", ".vscode"]
+}
+</code></pre>
+</li>
+<li>然后在根目录运行这句命令<pre><code>composer archive --format=zip --file=magento2
+composer archive --format=zip --file=magento2-$(date +%Y%m%d)
+</code></pre>
+</li>
+</ul>
+</li>
+</ul>
+&lt;!--
+tar -czvf /var/www/html/magento2.tar.gz /var/www/html/magento2
+    可以用 --exclude 参数来忽略一些目录或文件，例如这样
+    tar -czvf /var/www/html/magento2.tar.gz \
+        --exclude=var \
+        --exclude=generated \
+        --exclude=pub/static \
+        --exclude=.git \
+        --exclude=.vscode \
+        /var/www/html/magento2
+
+git archive --format=zip --output=archiveFileName.zip HEAD
+    git 会根据 .gitignore 文件的内容排除一些文件，但 .gitignore 要提交到仓库里才生效
+--&gt;
+
+<ul>
+<li>备份数据库<pre><code>mysqldump -u root -p magento2 &gt; backup_database.sql
+mysqldump -u root -p magento2 --no-create-info &gt; backup_database.sql
+</code></pre>
+</li>
+</ul>
 <h2>参考</h2>
 <p>中文文档 <a href="https://experienceleague.adobe.com/docs/commerce.html?lang=zh-Hans">https://experienceleague.adobe.com/docs/commerce.html?lang=zh-Hans</a></p>
 <p>github 里 magento2 的模块例子</p>
