--- a/mabbs.github.io/Mayx的计算机学习史.html
+++ b/mabbs.github.io/Mayx的计算机学习史.html
@@ -12,18 +12,13 @@
 <p>最早接触的编程是LOGO(?)……太过久远我也想不起来了……我只记得最早接触的是BAT(Windows批处理脚本语言)，以前在电脑里发现了一款Ghost工具箱(?)的脚本，虽然当时并不会编程，不过靠自己对计算机语言的理解在瞎编，竟然可以运行。<br/>
   后来加入了一个叫批处理之家的论坛，我叫做<a href="http://www.bathome.net/space.php?uid=51236">111</a>（LOL真不敢相信这个论坛一直到今天还活着），在这里我学到了不少关于批处理的事情。<br/>
   因为学批处理是基于某工具箱的，所以用批处理写的程序也是工具箱，就叫做批处理工具。以下是该程序的源代码：</p>
-<p>&lt;script&gt;
-  function showcode() { 
-  $('.showbutton').toggle();
-  $('.language-code').toggle();
-  }
-&lt;/script&gt;</p>
-<p>&lt;style&gt;
-.language-code{ display:none; }
-.language-shell{ display:none; }
-&lt;/style&gt;</p>
-&lt;button onclick="showcode()" class="showbutton"&gt;Show Code&lt;/button&gt;
-&lt;button onclick="showcode()" class="showbutton" style="display:none;"&gt;Hide Code&lt;/button&gt;<pre><code class="lang-code">@echo off
+&lt;details markdown="1"&gt;
+&lt;summary markdown="span"&gt;
+Show Code
+&lt;/summary&gt;
+
+```bat
+@echo off
 color f0
 mode con cols=50 lines=10
 echo.
@@ -2777,20 +2772,19 @@ if /i '%shy%'=='刷屏' goto mai
 if /i '%shy%'=='exit' goto _max
 if /i '%shy%'=='ai学习机' goto aixx
 ::在这里加入新的命令
-</code></pre>
-<p><strong>注：因为隐私原因，部分代码稍作修改</strong><br/>
+```
+&lt;/details&gt;<p><strong>注：因为隐私原因，部分代码稍作修改</strong><br/>
   当然，这个程序有不少地方是抄的，而且很烂……（毕竟是小时候写的嘛）</p>
 <h2>Linux Shell时期</h2>
 <p>因为手机（Android）系统基于Linux，所以我开始<a href="http://c.biancheng.net/cpp/shell/">学习Linux Shell</a>（没错，当时就是在这个网站上学的），
   以前用批处理学写工具箱的习惯当然也继承到了学写Linux Shell上，在Linux上写的工具箱的名字叫做myx，代码如下：</p>
-<p>&lt;script&gt; 
-    function showcode2() {  
-    $('.showbutton2').toggle(); 
-    $('.language-shell').toggle(); 
-    } 
-&lt;/script&gt;</p>
-&lt;button onclick="showcode2()" class="showbutton2"&gt;Show Code&lt;/button&gt; 
-&lt;button onclick="showcode2()" class="showbutton2" style="display:none;"&gt;Hide Code&lt;/button&gt;<pre><code class="lang-shell">#!/system/bin/sh
+&lt;details markdown="1"&gt;
+&lt;summary markdown="span"&gt;
+Show Code
+&lt;/summary&gt;
+
+```shell
+#!/system/bin/sh
 root="`id`"
 case $root in
 uid=0* )
@@ -3210,8 +3204,8 @@ sleep 2
 ;;
 esac
 done
-</code></pre>
-<p><strong>注：因为隐私原因，部分代码稍作修改</strong></p>
+```
+&lt;/details&gt;<p><strong>注：因为隐私原因，部分代码稍作修改</strong></p>
 <p>在学习Shell期间，我了解了一个很神奇的论坛，叫做Telnet BBS，貌似过去的高校会建这个东西。我学了Shell后
   感觉做BBS貌似很简单，于是开了一个远古巨坑：<a href="https://github.com/Mabbs/Mabbs">MaBBS</a>，这也就是为什么我的Github叫做Mabbs。<br/>
   这个东西写的我好苦啊，感觉这辈子都被这个项目给破坏了……（都是我的错QAQ）</p>
