--- a/mabbs.github.io/使用Cloudflare Workers制作博客AI摘要.html
+++ b/mabbs.github.io/使用Cloudflare Workers制作博客AI摘要.html
@@ -226,9 +226,9 @@ export default {
   }
 }
 </code></pre>
-<p>另外也写了配套的前端代码（用的jQuery，其实应该用Fetch的😂）：</p>
-<pre><code class="lang-html">{% raw %}
-&lt;b&gt;AI摘要&lt;/b&gt;
+<p>另外也写了配套的前端代码（用的jQuery，其实应该用Fetch的😂）：<br/>
+{% raw %}</p>
+<pre><code class="lang-html">&lt;b&gt;AI摘要&lt;/b&gt;
 &lt;p id="ai-output"&gt;正在生成中……&lt;/p&gt;
 &lt;script&gt;
   async function sha(str) {
@@ -270,9 +270,9 @@ export default {
   }
   ai_gen();
 &lt;/script&gt;
-{% endraw %}
 </code></pre>
-<p>本来文章内容应该从html里读更好一些，但是标签啥的还得用正则去掉，感觉不如Liquid方便😂。另外博客计数器不应该用MD5的，但懒得改之前的数据了，还好Cloudflare Workers为了兼容是支持MD5的，免得我还得想办法改数据库里的数据。</p>
+<p>{% endraw %} 
+  本来文章内容应该从html里读更好一些，但是标签啥的还得用正则去掉，感觉不如Liquid方便😂。另外博客计数器不应该用MD5的，但懒得改之前的数据了，还好Cloudflare Workers为了兼容是支持MD5的，免得我还得想办法改数据库里的数据。</p>
 <h1>使用方法</h1>
 <p>如果想给自己的静态博客加AI摘要功能的话也可以用我的接口，把前端代码粘到模板里就行，反正是用的Cloudflare的资源，而且现在通义千问的模型还是Beta版调用没有次数限制，就算之后变正式版，也能每天免费用1w个神经元，好像可以进行1k次左右的生成，完全够用了，只要别和我文章url重了就行。<br/>
   不过毕竟Workers本身是有每日调用次数限制的，自己部署当然更好。方法也很简单，首先在D1里创建一个数据库，然后创建一个Workers，在变量里绑定AI和新建的D1数据库，名字要起成blog_summary，如果想换名字就要改代码，里面建一张叫做blog_summary的表，需要有3个字段，分别是id、content、summary，都是text类型，如果想用博客计数器功能就再加一张counter表，一个是url，text类型，另一个是counter，int类型。本来博客计数器接口名字也打算用counter的，结果不知道AdBlock有什么大病，居然会屏蔽“counter?id=”这样的请求😆，害的我只能改成count_click这样的名字了。</p>
