--- a/blog.forecho.com/使用价格行为学交易犯的错误.html
+++ b/blog.forecho.com/使用价格行为学交易犯的错误.html
@@ -4,7 +4,7 @@
 <h2>新手常犯的错误</h2>
 <h3>逆市交易</h3>
 <p>新手总是喜欢逆势操作，因为觉得风险小，只需要设置很低的止损就可以了，但是低止损意味着胜率很低，虽然每次只会亏一点钱，但是积累下来，会亏很多钱。</p>
-<p>这个是课程 14 期，AI Brooks 讲得，看完之后我才明白自己为什么这么喜欢逆市交易了，确实分析的很低，这一个多月的交易中，我曾在大涨的行情中不断做空，然后不断小亏，最后大亏。当时心里想的是：已经涨这么多了，不可能再继续涨了吧？肯定会跌的，做空赌反转，结果就是亏钱。</p>
+<p>这个是课程 14 期，Al Brooks 讲得，看完之后我才明白自己为什么这么喜欢逆市交易了，确实分析的很低，这一个多月的交易中，我曾在大涨的行情中不断做空，然后不断小亏，最后大亏。当时心里想的是：已经涨这么多了，不可能再继续涨了吧？肯定会跌的，做空赌反转，结果就是亏钱。</p>
 <p>我也曾在大跌的行情中不断做多，然后不断小亏，最后大亏。当时心里想的是：已经跌这么多了，不可能再继续跌了吧？肯定会涨的，做多赌反转，结果就是亏钱。</p>
 <p>自动看完 14 期之后，我每次准备逆市交易的时候，都会想到这个视频，然后就会提醒自己，逆市交易是很难盈利的，因为胜率很低，很容易亏钱。</p>
 &lt;!--more--&gt;
@@ -15,23 +15,28 @@
 <p>有一次大涨的好好的，结果我去洗了个玩，还以为今天会一直涨下去，结果回来一看，中间因为特朗普的一个新闻消息，暴跌了，由于我没有挂止损单，结果利润全没了，甚至还亏钱了。</p>
 <p>还有一次没有及时挂止损单，亏损越来越多，导致后面干脆不止损了，那天后半夜有鲍威尔发言，结果真的 V 了，中途我的期货小账户就差几美元爆仓了，真是幸运的，但是之后的某一天，还是没及时止损，结果真的爆仓了。</p>
 <p>从那之后，我每次下单之后必挂止损单，不能让止损单只停留在脑子里。</p>
+<p>一定要挂止损单的另外一个原因就是突发行情，手忙脚乱的，手动根本来不及止损。</p>
 <p>这里要补充一下：一定要挂止损市价单，不要挂止损限价单，因为限价单在突发行情下，不会成交，然后你会造成很大的亏损。</p>
+<h3>撤销止损单</h3>
+<p>挂了止损单，然后订单手动止盈了，止损单变入场单，本不应该的操作被执行了，这件事情我犯过 3 次了，有一次导致很大的亏损。</p>
+<p>所以每次止盈之后切记去检查一下是否还有止损单，如果有，记得撤销。</p>
 <h3>没有设置合理的止损</h3>
-<p>AI Brooks 有讲过如何挂止损单，我后面会写一篇关于如何设置止损单的文章。这里只分享一下如果设置不合理的止损会亏很多钱。</p>
+<p>Al Brooks 有讲过如何挂止损单，我后面会写一篇关于如何设置止损单的文章。这里只分享一下如果设置不合理的止损会亏很多钱。</p>
 <p>震荡区间，很容易你的止损打掉之后，价格又回来了，如果你没有被止损，那么你是盈利的，导致这种原因就是你害怕风险，没有设置合理的止损。</p>
 <h3>大风险重仓</h3>
 <p>刚开始涨了 20个点不敢追高，眼看着价格一路上线，心里后悔不已，然后重仓买入，想着赚点钱就跑，结果买完就开始跌了，而且是大跌，这就是我犯的错误。</p>
-<p>这本质上是对市场周期的不理解，对交易风险的认知不足。 AI Brooks 在 12 期的时候讲过，突破模式和窄通道模式如何交易，遇到这种行情只能跟随趋势，前期没有入场，后期再追高，风险很大，但是你的胜率很高，所以你只能用小仓位入场。</p>
+<p>这本质上是对市场周期的不理解，对交易风险的认知不足。 Al Brooks 在 12 期的时候讲过，突破模式和窄通道模式如何交易，遇到这种行情只能跟随趋势，前期没有入场，后期再追高，风险很大，但是你的胜率很高，所以你只能用小仓位入场。</p>
 <p>另外就是买在了抢购高潮，卖在了抛售高潮，全是陷阱。</p>
 <h3>过度交易</h3>
 <ul>
 <li>刚开始学价格行为学的时候，老想着快点赚钱，毕竟着急回本，但是刚开始我的经验很少，很多概念不熟悉，只能小仓位练习，这是我没有意识到的问题。</li>
 <li>只想着早点赚钱，却忽略了风险，查看交易记录的时候，发现我刚开始的时候，甚至每一根 5 分 k 线都交易，总想着抓住每一波行情，但是结果就是亏钱。</li>
 <li>23 小时交易，通常来说期货只有在常规交易时间波动才比较大，赚钱更容易，很多时候亚盘时间波动非常小，很难赚钱，而且盯盘浪费了大量时间，得不偿失。</li>
+<li>刚开盘的几笔都失败了，后面想回本，不能正常理性的交易，导致越亏越多。这种情况就应该停止交易，去休息或者学习。</li>
 <li>刚开始嫌弃 MES 波动小，赚不到钱，还拿 MNQ 练手，结果亏的更多。</li>
 </ul>
 <p>以上的瞎操作，导致基本上连亏 1 个月了，犯过各种错误。</p>
-<p>亏了很多钱之后，现在终于老实了，只敢交易一个 MES 了，看准了信号之后才入场，不追求赚到所有的钱。等以后稳定盈利了，再考虑增加数量的事情，至于回本，现在也想明白了，能力提升之后，自然就回本了。</p>
+<p>亏了很多钱之后，现在终于老实了，只敢交易一个 MES 了，<strong>看不懂的行情不做</strong>，看准了信号之后才入场，刚开始不要追求赚钱，不亏钱就可以。等以后稳定盈利了，再考虑增加数量的事情，至于回本，现在也想明白了，能力提升之后，自然就回本了。</p>
 <h3>对惊喜/惊吓 k 线反应迟钝</h3>
 <p>我觉得这个是要练习的，我真的遇到过刚如果就遇到惊吓 k 线，结果没有及时止损，还在想为什么这跟 k 线这么长，甚至还去找新闻，结果行情还在延续，止损过晚，导致亏损扩大。</p>
 <p>遇到惊吓 k 线，不管三七二十一，我们只能第一时间止损，然后再去找原因都可以。</p>
@@ -39,13 +44,14 @@
 <p>对震荡区间的识别不够早，新手应该避免在震荡区间交易，因为很难赚钱，但是这不意味着你不去学习震荡区间的一些特征。</p>
 <p>只有早点识别出震荡区间，你才能使用正确的交易策略。在震旦区间我们要高抛低吸，在突破区间我们要顺势而为。</p>
 <p>另外就是震荡区间会有第二段陷阱，这个我犯过几次错误（新手很容易犯），当时以为突破了，结果只是一个假突破，追上去，然后就亏钱了。</p>
+<p>记住在震荡区间 80% 的走势都不会突破，所以不要赌突破成功，虽然突破之后的利润很诱人，但是你赌突破 80% 的概率会亏钱，所以千万不能赌。</p>
 <h3>情绪化交易</h3>
 <p>有时候小概率事情发生了，止损被打掉之后，不认输，继续按照之前的思路交易，结果导致亏损扩大。</p>
 <p>认错是很难的，但是我们要想成为一个优秀的交易员，就必须学会认错。避免复仇式交易。</p>
 <h3>没有看到信号 K 就入场</h3>
 <p>这个本质上还是对价格行为学的不熟练，还是使用以前的坏毛病去交易。</p>
 <p>一个长下影线或者长上影线，就以为要反转了，结果之后一部分人获利离场，当你赌反转的时候，行情还在延续。</p>
-<p>AI Brooks 的观点： 80% 的反转都会失败，所以不要去赌反转，除非你已经看到明显的反转信号。</p>
+<p>Al Brooks 的观点： 80% 的反转都会失败，所以不要去赌反转，除非你已经看到明显的反转信号。</p>
 <h3>避开大事件</h3>
 <p>大事件之前，请避免有持仓，因为这本质上就是赌博，你不知道会发生什么，而且大事件之前，价格会非常波动，很难判断方向，很容易亏钱。要交易请在大事件之后出方向了再交易。</p>
 <p>这里的大事件包括一些数据的发布：</p>
@@ -58,8 +64,18 @@
 <p>不要等他们一开始讲话就入场，要等讲话结束之后，出方向了再交易，我在这里吃过大亏，因为这种突发消息，价格波动非常大，刚开始你以为要涨了，追进去，马上跌了。</p>
 <p>他们刚开始讲了两句利好消息，你追进去，等一下，他们又讲了两句利空消息，又大跌了，你就亏钱了。这种行情很难操作，而且亏起钱来很快，因为波动非常大，5 分钟砸 50个点，5 分钟涨 50个点，非常恐怖。</p>
 <p>所以记得设置好时间/日历提醒，避开大事件持仓。</p>
+<h3>开盘着急赚钱</h3>
+<blockquote><p>大多数交易者在开盘时不应该急于行动。开盘时通常有 80% 的机会出现震荡区间，只有 20% 的机会出现趋势。这意味着如果交易者在开盘时等待 6-12 根 K 线，他们有 80% 的机会不会错过大幅波动，这意味着大多数交易者最好还是耐心等待。</p>
+</blockquote>
+<p>开盘的时候不要着急赚钱，先观察一下，等 6-12 根 K 线之后再交易。</p>
+<h3>使用不合理的仓位</h3>
+<p>Al Brooks 强调使用小仓位，亏了也不特别心疼的那种（也不能用太小仓位，亏了没感觉是学不会的），特别是刚开始练习的时候，不要想着赚大钱，先想着不要亏钱。</p>
+<p>我刚开始拿 MNQ 练习就是想赚钱，但是自己能力还不行，经常亏钱，这个学费交的太贵了，后来换成 MES 之后好了一点，大概每天 100 刀左右盈亏，但是最近特朗普搞关税，把整个美股的波动性带起来了，最近 2 周大盘都是日常 3 倍的波动，真的有点吃不消了。</p>
+<p>仓位大了，非常影响你的情绪，会导致你做出错误的操作，明明是一笔赚钱的单子，但是稍微的一点回调你就拿不住了，止损在最差的点位。</p>
+<p>所以我最近要换成 TQQQ 练习了，IB 日内操作需要资金满足 2.5w 美金，门槛太高了。香港大分部券商手续费太贵了，小资金练习结果就是给券商打工。</p>
+<p>好在<a href="https://app.longbridgehk.com/ac/oa?account_channel=lb&amp;channel=HB100006&amp;invite-code=223947">长桥</a>目前有永久免佣金活动，入金 1 万港币就可以，每笔只需要 1 刀手续费，非常划算。</p>
 <h2>总结</h2>
 <p>以上就是我亲身经历的一些错误，都是钱亏出来的经验，希望对大家有所帮助。</p>
-<p>另外就是 AI Brooks 的价格行为学真是厉害，他的视频课程有 90 多个吧，是非常<strong>完整的一套交易系统</strong>，而且只卖 399 美元，非常良心。之前也买过几千美元的课程，真是的没学到什么有用的。</p>
+<p>另外就是 <a href="https://www.brookstradingcourse.com/">Al Brooks 的价格行为学</a>真是厉害，他的视频课程有 90 多个吧，是非常<strong>完整的一套交易系统</strong>，而且只卖 399 美元，非常良心。之前也买过几千美元的课程，真是的没学到什么有用的。</p>
 <p>学完之后你就可以自己去分析股票了，不需要再去跟单或者问别人了。但是这套课程难度还是很大的，毕竟东西很多，而且还需要大量练习，才能深刻的去理解。</p>
-<p>现在我重新认识了交易员这个职位，深刻认识到「<strong>如果炒股轻轻松松就能赚钱的话，世界上就没有穷人了</strong>」。感谢 AI Brooks 的课程，让我对回本甚至盈利有了信心。</p>
+<p>现在我重新认识了交易员这个职位，深刻认识到「<strong>如果炒股轻轻松松就能赚钱的话，世界上就没有穷人了</strong>」。感谢 Al Brooks 的课程，让我对回本甚至盈利有了信心。</p>
