--- a/index.html
+++ b/index.html
@@ -6,12 +6,48 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8871 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8889 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20TradingView%20%E6%8C%87%E6%A0%87%E4%BB%8B%E7%BB%8D.html>2025-04-27 价格行为学 TradingView 指标介绍</a></li>
+
+<li><a href=conge.livingwithfcs.org/FCS%20%E7%97%85%E5%8F%8B%E6%95%85%E4%BA%8B%EF%BC%9A%E4%B8%BA%E8%87%AA%E5%B7%B1%E7%9A%84%20FCS%20%E4%BB%A3%E8%A8%80.html>2025-04-25 FCS 病友故事：为自己的 FCS 代言</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202516%20%E8%AE%AD%E7%BB%83%E7%AC%AC%2011%20%E5%91%A8%EF%BC%8C%2020%20%E8%8B%B1%E9%87%8C%E9%95%BF%E5%B4%A9%EF%BC%8C%E4%BD%86%E6%81%A2%E5%A4%8D%E5%90%91%E5%A5%BD.html>2025-04-23 折返点 2516 训练第 11 周， 20 英里长崩，但恢复向好</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202516%20%E6%98%A5%E5%81%87%E8%AE%B0%EF%BC%9A%E6%B8%A9%E6%B3%89%E3%80%81%E5%BE%92%E6%AD%A5%E4%B8%8E%E8%B5%B6%E6%B5%B7.html>2025-04-23 父范学堂 2516 春假记：温泉、徒步与赶海</a></li>
+
+<li><a href=mabbs.github.io/%E5%85%B3%E4%BA%8ELLM%E4%B8%8A%E9%99%90%E7%9A%84%E6%8E%A2%E7%B4%A2.html>2025-04-22 关于LLM上限的探索</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202515%20Storm%20%E6%9D%A5%E5%80%9F%E5%AE%BF.html>2025-04-18 父范学堂 2515 Storm 来借宿</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202515%20%E8%AE%AD%E7%BB%83%E7%AC%AC10%E5%91%A8%20%E7%BB%A7%E7%BB%AD%E8%BD%BB%E6%9D%BE%E8%B7%91.html>2025-04-18 折返点 2515 训练第10周 继续轻松跑</a></li>
+
+<li><a href=www.cnfeat.com/%E6%95%995%E5%B2%81%E5%A8%83%E4%B8%8B%E5%9B%BD%E9%99%85%E8%B1%A1%E6%A3%8B%E7%9A%8440%E5%A4%9A%E5%A4%A9%EF%BC%8C%E4%BB%96%E4%BB%8E%E5%93%AD%E7%9D%80%E6%89%94%E6%A3%8B%E5%AD%90%E5%88%B0%E7%BB%99%E6%88%91%E8%AE%B2%E6%88%98%E6%9C%AF.html>2025-04-18 教5岁娃下国际象棋的40多天，他从哭着扔棋子到给我讲战术</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E8%B6%8B%E5%8A%BF.html>2025-04-15 价格行为学 - 趋势</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%A6%82%E4%BD%95%E9%80%9A%E8%BF%87%E7%B3%BB%E7%BB%9F%E5%8C%96%E7%BB%83%E4%B9%A0%E6%8E%8C%E6%8F%A1%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%EF%BC%9F.html>2025-04-13 价格行为学 - 如何通过系统化练习掌握价格行为交易？</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Measured%20Moves%28%E7%A7%BB%E5%8A%A8%E6%B5%8B%E9%87%8F%29.html>2025-04-12 价格行为学 - Measured Moves(移动测量)</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E5%90%AC%E8%A7%81%20FCS%20%E7%9A%84%E5%A3%B0%E9%9F%B3%20FCS%20%E5%9F%BA%E9%87%91%E4%BC%9A%E7%AC%AC%2034%20%E6%9C%9F%E7%94%B5%E5%AD%90%E9%80%9A%E8%AE%AF.html>2025-04-12 听见 FCS 的声音 FCS 基金会第 34 期电子通讯</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E4%BB%8E%E8%AF%95%E9%94%99%E5%88%B0%E7%A8%B3%E5%81%A5%E7%9A%84%E5%AE%B6%E5%BA%AD%E7%90%86%E8%B4%A2%E5%AE%9E%E5%BD%95.html>2025-04-11 从试错到稳健的家庭理财实录</a></li>
+
+<li><a href=conge.livingwithfcs.org/2025%20%E4%B8%89%E6%9C%88%E8%AF%BB%E5%90%88%E4%BD%9C%20%E6%8A%95%E8%B5%84%20%E5%B0%8F%E8%AF%B4%20%E4%BC%A0%E8%AE%B0%20%E5%91%BD%E7%90%86%E2%80%A6%E2%80%A6%2010%20%E6%9C%AC.html>2025-04-10 2025 三月读合作 投资 小说 传记 命理…… 10 本</a></li>
+
+<li><a href=mabbs.github.io/%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8JS%E9%80%9A%E8%BF%87%E8%AE%A2%E9%98%85%E6%BA%90%E6%9F%A5%E7%9C%8B%E6%96%87%E7%AB%A0%EF%BC%9F.html>2025-04-08 如何使用JS通过订阅源查看文章？</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202514%20%E5%85%AC%E7%AB%8B%E5%AD%A6%E6%A0%A1%EF%BC%8C%E5%9C%A8%E5%AE%B6%E8%87%AA%E5%AD%A6%E5%92%8C%E6%88%B7%E5%A4%96%E5%AD%A6%E6%A0%A1.html>2025-04-07 父范学堂 2514 公立学校，在家自学和户外学校</a></li>
+
+<li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202514%20%E8%AE%AD%E7%BB%83%E7%AC%AC9%E5%91%A8%20%E9%99%8D%E9%80%9F%E4%BF%9D%E5%B9%B3%E5%AE%89.html>2025-04-07 折返点 2514 训练第9周 降速保平安</a></li>
+
+<li><a href=blog.forecho.com/%E5%A6%82%E4%BD%95%E6%88%90%E4%B8%BA%E4%B8%80%E5%90%8D%E4%B8%93%E4%B8%9A%E7%9A%84%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%E5%91%98.html>2025-04-07 如何成为一名专业的价格行为交易员</a></li>
 
 <li><a href=sund.site/Friends.html>2025-04-06 Friends</a></li>
 
@@ -4663,7 +4699,7 @@
 
 <li><a href=hijiangtao.github.io/Jest%20%E9%85%8D%E7%BD%AE%E4%B8%8E%20React%20Hook%20%E5%8D%95%E5%85%83%E6%B5%8B%E8%AF%95%E6%95%99%E7%A8%8B.html>2021-07-30 Jest 配置与 React Hook 单元测试教程</a></li>
 
-<li><a href=young-lord.github.io/%E9%A3%8E%E6%9A%B4%E6%9D%A1%E6%8E%89%E8%A1%80%E7%A0%94%E7%A9%B6.html>2021-07-30 风暴条掉血研究</a></li>
+<li><a href=young-lord.github.io/Arcaea%20%E9%A3%8E%E6%9A%B4%E6%9D%A1%E6%8E%89%E8%A1%80%E7%A0%94%E7%A9%B6.html>2021-07-30 Arcaea 风暴条掉血研究</a></li>
 
 <li><a href=blog.forecho.com/%E3%80%90%E6%B7%B1%E5%BA%A6%E7%90%86%E8%B4%A2%2032%E3%80%91%E8%BF%9C%E7%A6%BB%E4%B8%AD%E6%A6%82%E8%82%A1%EF%BC%8C%E6%88%91%E9%83%BD%E6%8A%95%E8%B5%84%E4%BA%86%E5%93%AA%E4%BA%9B%E9%9D%9E%E4%B8%AD%E6%A6%82%E8%82%A1.html>2021-07-29 【深度理财 32】远离中概股，我都投资了哪些非中概股</a></li>
 
