--- a/jasonkayzk.github.io/【顶】さよなら２０２４、こんにちは２０２５！.html
+++ b/jasonkayzk.github.io/【顶】さよなら２０２４、こんにちは２０２５！.html
@@ -326,7 +326,7 @@
 <ul>
 <li><p>证书：</p>
 <ul>
-<li><p>[ ] 高校教师资格证 + 普通话证</p>
+<li><p>[x] 高校教师资格证 + 普通话证</p>
 </li>
 <li><p>[ ] 通过软考中级（软件设计师）</p>
 </li>
@@ -350,7 +350,7 @@
 <li><p>购物：</p>
 <ul>
 <li>[ ] 40系 N 卡</li>
-<li>[ ] 佳明 255 跑表</li>
+<li>[x] 佳明 255 跑表</li>
 </ul>
 </li>
 </ul>
