--- a/mabbs.github.io/Web Crypto Api学习笔记.html
+++ b/mabbs.github.io/Web Crypto Api学习笔记.html
@@ -9,7 +9,7 @@
   看着示例代码，我感觉真是要爆炸了，各种奇葩的对象，像什么ArrayBuffer还是什么Uint8Array啥的，还有一堆乱七八糟要求的格式，密码长度还必须是16的倍数？而且还有什么初始向量iv……真的是一言难尽……<br/>
   不过我还是发挥了作为辣鸡程序员的特长——Copy&amp;Paste大法，最终可算是拼凑出了一个看起来勉强能用的代码……</p>
 <h1>辣鸡代码</h1>
-<pre><code class="lang-js">function getByteLen(val) {
+<pre><code class="lang-javascript">function getByteLen(val) {
     var len = 0;
     for (var i = 0; i &lt; val.length; i++) {
         if (val[i].match(/[^\x00-\xff]/ig) != null) len += 3;
