--- a/mabbs.github.io/免费订阅一个属于自己的邮件日报.html
+++ b/mabbs.github.io/免费订阅一个属于自己的邮件日报.html
@@ -6,7 +6,7 @@
 粘上去，保存，然后在主机面板上设置CornTab任务，设定为每天运行一次，然后OK……对了，记得把下面变量<code>$to</code>里面的地址换成自己的邮箱地址，不然每次发送邮件就会发
 到我的邮箱了……</p>
 <h1>代码</h1>
-<pre><code class="lang-PHP">&lt;?php
+<pre><code class="lang-php">&lt;?php
 function curl_post_https($url,$data){ // 模拟提交数据函数
     $curl = curl_init(); // 启动一个CURL会话
     curl_setopt($curl, CURLOPT_URL, $url); // 要访问的地址
