--- a/mabbs.github.io/如何自己写一个博客计数器.html
+++ b/mabbs.github.io/如何自己写一个博客计数器.html
@@ -13,7 +13,7 @@
 <pre><code class="lang-html">{% raw %} Hits: &lt;span id="{{ page.url }}" class="visitors" &gt;Loading...&lt;/span&gt;{% endraw %}
 </code></pre>
 <p>JS代码：（需要Jquery）</p>
-<pre><code class="lang-js">var auxiliaryHost = "你的域名";
+<pre><code class="lang-javascript">var auxiliaryHost = "你的域名";
 function showHitS(hits){
     $.get(auxiliaryHost+"/counter.php?action=show&amp;id="+hits.id,function(data){
             hits.innerHTML=Number(data);
