--- a/blog.forecho.com/价格行为学 - Always In.html
+++ b/blog.forecho.com/价格行为学 - Always In.html
@@ -1,4 +1,4 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-always-in.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-always-in.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 13 章内容。</p>
+<p>本篇文章主要是总结了 Al Brooks 的价格行为学课程的第 13 章内容。</p>
 <h1>#</h1>
