--- a/blog.forecho.com/价格行为学 - K 线、交易机会和信号 K 线.html
+++ b/blog.forecho.com/价格行为学 - K 线、交易机会和信号 K 线.html
@@ -1,6 +1,6 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-candles-setups-and-signal-bars.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-candles-setups-and-signal-bars.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 8 章内容。</p>
+<p>本篇文章主要是总结了 Al Brooks 的价格行为学课程的第 8 章内容。</p>
 <h2>趋势 K 线和震荡 K 线</h2>
 <p><img alt="OkxOZL" src="https://img.forecho.com/OkxOZL.png"/></p>
 <p>每根 K 线要么是趋势 K 线，要么是震荡 K 线，就像市场要么处于趋势区间，要么处于震荡区间。</p>
