--- a/blog.forecho.com/价格行为学 - Measured Moves(移动测量).html
+++ b/blog.forecho.com/价格行为学 - Measured Moves(移动测量).html
@@ -1,6 +1,6 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-measured-moves.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-measured-moves.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 20 章内容。</p>
+<p>本篇文章主要是总结了 Al Brooks 的价格行为学课程的第 20 章内容。</p>
 <h2>简单介绍</h2>
 <p>Measured Moves（简称 MM） 是价格行为学中一个重要的技术分析工具，主要用于预测价格目标位，帮我们止盈找到合理的止盈位置。</p>
 <p>本文介绍了三种主要的测量方法：</p>
