--- a/blog.forecho.com/价格行为学 - 趋势.html
+++ b/blog.forecho.com/价格行为学 - 趋势.html
@@ -88,4 +88,12 @@
 <li>趋势有 80% 的概率会一直延续</li>
 <li>回调买入，突破行情第一次回调很大概率是反转失败</li>
 </ul>
+<h2>趋势的强与弱</h2>
+<p>根据<a href="https://blog.forecho.com/price-actions-market-cycle.html">价格行为的市场周期</a>理论，趋势的强弱依次为：</p>
+<ul>
+<li>突破</li>
+<li>窄通道</li>
+<li>震荡区间/宽通道</li>
+</ul>
+<h3>几乎没有回调/反弹的趋势</h3>
 <p>未完待续...</p>
