--- a/blog.forecho.com/使用价格行为学交易犯的错误.html
+++ b/blog.forecho.com/使用价格行为学交易犯的错误.html
@@ -6,7 +6,7 @@
 <p>新手总是喜欢逆势操作，因为觉得风险小，只需要设置很低的止损就可以了，但是低止损意味着胜率很低，虽然每次只会亏一点钱，但是积累下来，会亏很多钱。</p>
 <p>这个是课程 14 期，Al Brooks 讲得，看完之后我才明白自己为什么这么喜欢逆市交易了，确实分析的很低，这一个多月的交易中，我曾在大涨的行情中不断做空，然后不断小亏，最后大亏。当时心里想的是：已经涨这么多了，不可能再继续涨了吧？肯定会跌的，做空赌反转，结果就是亏钱。</p>
 <p>我也曾在大跌的行情中不断做多，然后不断小亏，最后大亏。当时心里想的是：已经跌这么多了，不可能再继续跌了吧？肯定会涨的，做多赌反转，结果就是亏钱。</p>
-<p>自动看完 14 期之后，我每次准备逆市交易的时候，都会想到这个视频，然后就会提醒自己，逆市交易是很难盈利的，因为胜率很低，很容易亏钱。</p>
+<p>自从看完 14 期之后，我每次准备逆市交易的时候，都会想到这个视频，然后就会提醒自己，逆市交易是很难盈利的，因为胜率很低，很容易亏钱。</p>
 &lt;!--more--&gt;
 
 
@@ -70,9 +70,21 @@
 <p>开盘的时候不要着急赚钱，先观察一下，等 6-12 根 K 线之后再交易。</p>
 <h3>使用不合理的仓位</h3>
 <p>Al Brooks 强调使用小仓位，亏了也不特别心疼的那种（也不能用太小仓位，亏了没感觉是学不会的），特别是刚开始练习的时候，不要想着赚大钱，先想着不要亏钱。</p>
-<p>我刚开始拿 MNQ 练习就是想赚钱，但是自己能力还不行，经常亏钱，这个学费交的太贵了，后来换成 MES 之后好了一点，大概每天 100 刀左右盈亏，但是最近特朗普搞关税，把整个美股的波动性带起来了，最近 2 周大盘都是日常 3 倍的波动，真的有点吃不消了。</p>
+<p>我刚开始拿 MNQ 练习就是想赚钱，但是自己能力还不行，经常亏钱，这个学费交的太贵了，后来换成 MES 之后好了一点，大概每天 100 刀左右盈亏，</p>
 <p>仓位大了，非常影响你的情绪，会导致你做出错误的操作，明明是一笔赚钱的单子，但是稍微的一点回调你就拿不住了，止损在最差的点位。</p>
-<p>所以我最近要换成 TQQQ 练习了，IB 日内操作需要资金满足 2.5w 美金，门槛太高了。香港大分部券商手续费太贵了，小资金练习结果就是给券商打工。</p>
+<h2>关于券商</h2>
+<h3>老虎</h3>
+<p>我刚开始用富途期货交易，但是自从体验过老虎交易期货之后才发现老虎券商非常适合价格行为学交易，主要优势有：</p>
+<p><img alt="" src="https://img.forecho.com/maeNEF.png"/></p>
+<ul>
+<li>迷你期货免佣金，买卖 1 手共 3u，比富途便宜 2u</li>
+<li>日内期货不过夜有保证金优惠，MES 只需要 800 多美金，富途需要 1600 多美金</li>
+<li>PC 版闪电下单，买单和止盈止损同时一键下单，非常好用，这个富途没有</li>
+<li>划线交易，止损和止盈可以靠拖动划线来修改，非常方便，这个富途也没有</li>
+</ul>
+<p>专属开户链接：<a href="https://tigr.link/5FQAzo">https://tigr.link/5FQAzo</a></p>
+<h3>长桥</h3>
+<p>最近特朗普搞关税，把整个美股的波动性带起来了，最近 2 周大盘都是日常 3 倍的波动，真的有点吃不消了。所以我最近要换成 TQQQ 练习了，IB 日内操作需要资金满足 2.5w 美金，门槛太高了。香港大分部券商手续费太贵了，小资金练习结果就是给券商打工。</p>
 <p>好在<a href="https://app.longbridgehk.com/ac/oa?account_channel=lb&amp;channel=HB100006&amp;invite-code=223947">长桥</a>目前有永久免佣金活动，入金 1 万港币就可以，每笔只需要 1 刀手续费，非常划算。</p>
 <h2>总结</h2>
 <p>以上就是我亲身经历的一些错误，都是钱亏出来的经验，希望对大家有所帮助。</p>
