--- a/codeinchinese.com/中文编程专栏介绍, 初衷和希冀.html
+++ b/codeinchinese.com/中文编程专栏介绍, 初衷和希冀.html
@@ -31,3 +31,4 @@
 </li>
 </ul>
 <p>希望认识对中文编程任何方面有兴趣和经验的同好，为推进中文编程的切磋、实践、推广和市场化群策群力。望各位多多进言，踊跃投稿~</p>
+<p><a href="https://zhuanlan.zhihu.com/p/100306001">2019 全年《中文编程》知乎专栏目录</a></p>
