--- a/codeinchinese.com/在各种编程语言中使用中文命名.html
+++ b/codeinchinese.com/在各种编程语言中使用中文命名.html
@@ -7,6 +7,7 @@
 <a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/问好.cpp">C++</a>,
 <a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/大家好.cs">C#</a>,
 D(<a href="https://dlang.org/spec/lex.html#identifiers">参考</a>),
+<a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/猜数字.clp">CLIPS</a>
 <a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/斐波那契.coffee">CoffeeScript</a>,
 <a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/斐波那契.lisp">Common Lisp</a>,
 <a href="https://github.com/program-in-chinese/overview/blob/master/示例代码/你好.asm">FASM</a>,
