--- a/blog.forecho.com/价格行为学 - 市场周期.html
+++ b/blog.forecho.com/价格行为学 - 市场周期.html
@@ -1,6 +1,6 @@
 <h2><a href="https://github.com/forecho/hugo-blog/blob/master/content/posts/price-actions-market-cycle.md">仓库源文</a>，<a href="https://blog.forecho.com/price-actions-market-cycle.html">站点原文</a></h2>
 <h2>引言</h2>
-<p>本篇文章重要是总结了 Al Brooks 的价格行为学课程的第 12 章内容。</p>
+<p>本篇文章主要是总结了 Al Brooks 的价格行为学课程的第 12 章内容。</p>
 <h2>市场周期的阶段</h2>
 <p>市场周期分为 4 个阶段：</p>
 <ul>
@@ -38,6 +38,7 @@
 <li>可以选择小周期的 k 线图，找回调下单。</li>
 <li>做波段交易（持仓久一点）。新手遇到这种行情很容易止盈太早，他们往往止盈之后很难再次入场，从而错过大行情。</li>
 <li>第一次反转大概率失败。</li>
+<li>无法确认是窄通道还是突破的时候我们有限假设是突破。</li>
 </ul>
 <h3>窄通道</h3>
 <p><img alt="" src="https://img.forecho.com/T53wey.png"/></p>
@@ -73,6 +74,7 @@
 </ul>
 </li>
 <li>新手做波段交易，经验丰富的交易者做刮头皮交易（这对于新手来说很难）。</li>
+<li>无法确认是窄通道还是宽通道的时候，我们有限假设是窄通道。</li>
 </ul>
 <h3>宽通道</h3>
 <p><img alt="6UfDud" src="https://img.forecho.com/6UfDud.png"/></p>
