--- a/index.html
+++ b/index.html
@@ -6,18 +6,30 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8890 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8901 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8%E9%99%90%E4%BB%B7%E8%AE%A2%E5%8D%95%E7%BB%93%E5%90%88%E5%96%87%E5%8F%AD%E5%BD%A2%E6%80%81%E8%8E%B7%E5%88%A9.html>2025-05-10 价格行为学 - 如何使用限价订单结合喇叭形态获利</a></li>
+
+<li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Rose%20%E7%9A%84%20Gap%20Bar.html>2025-05-07 价格行为学 - Rose 的 Gap Bar</a></li>
+
+<li><a href=mabbs.github.io/Mac%20Studio%20M3%20Ultra%E4%BD%BF%E7%94%A8%E4%BD%93%E9%AA%8C.html>2025-05-07 Mac Studio M3 Ultra使用体验</a></li>
+
 <li><a href=jasonkayzk.github.io/%E8%B7%91%E6%AD%A5%E4%B8%80%E5%B9%B4%E5%A4%9A%E7%9A%84%E4%B8%80%E4%BA%9B%E6%80%BB%E7%BB%93%E5%92%8C%E6%84%9F%E6%83%B3.html>2025-05-04 跑步一年多的一些总结和感想</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%810.4%EF%BC%9A%E7%94%B1%E4%BD%8D%E7%BD%AE%E5%AE%9A%E9%80%9F%E5%BA%A6.html>2025-05-01 用 CLIPS 模拟生态0.4：由位置定速度</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%81%E7%AC%AC0.3%E6%AD%A5%EF%BC%9A%E6%B7%BB%E5%8A%A0%E4%BD%8D%E7%BD%AE.html>2025-04-29 用 CLIPS 模拟生态第0.3步：添加位置</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20TradingView%20%E6%8C%87%E6%A0%87%E4%BB%8B%E7%BB%8D.html>2025-04-27 价格行为学 TradingView 指标介绍</a></li>
 
 <li><a href=conge.livingwithfcs.org/FCS%20%E7%97%85%E5%8F%8B%E6%95%85%E4%BA%8B%EF%BC%9A%E4%B8%BA%E8%87%AA%E5%B7%B1%E7%9A%84%20FCS%20%E4%BB%A3%E8%A8%80.html>2025-04-25 FCS 病友故事：为自己的 FCS 代言</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%81%E7%AC%AC0.2%E6%AD%A5%EF%BC%9A%E9%9A%8F%E6%9C%BA%E8%A7%85%E9%A3%9F.html>2025-04-25 用 CLIPS 模拟生态第0.2步：随机觅食</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202516%20%E8%AE%AD%E7%BB%83%E7%AC%AC%2011%20%E5%91%A8%EF%BC%8C%2020%20%E8%8B%B1%E9%87%8C%E9%95%BF%E5%B4%A9%EF%BC%8C%E4%BD%86%E6%81%A2%E5%A4%8D%E5%90%91%E5%A5%BD.html>2025-04-23 折返点 2516 训练第 11 周， 20 英里长崩，但恢复向好</a></li>
 
@@ -31,13 +43,19 @@
 
 <li><a href=www.cnfeat.com/%E6%95%995%E5%B2%81%E5%A8%83%E4%B8%8B%E5%9B%BD%E9%99%85%E8%B1%A1%E6%A3%8B%E7%9A%8440%E5%A4%9A%E5%A4%A9%EF%BC%8C%E4%BB%96%E4%BB%8E%E5%93%AD%E7%9D%80%E6%89%94%E6%A3%8B%E5%AD%90%E5%88%B0%E7%BB%99%E6%88%91%E8%AE%B2%E6%88%98%E6%9C%AF.html>2025-04-18 教5岁娃下国际象棋的40多天，他从哭着扔棋子到给我讲战术</a></li>
 
+<li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%81%E7%AC%AC0.1%E6%AD%A5%EF%BC%9A%E5%8D%95%E7%A7%8D%E7%B9%81%E8%A1%8D.html>2025-04-16 用 CLIPS 模拟生态第0.1步：单种繁衍</a></li>
+
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E8%B6%8B%E5%8A%BF.html>2025-04-15 价格行为学 - 趋势</a></li>
+
+<li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%81%E7%AC%AC0%E6%AD%A5%EF%BC%9A%E5%8D%95%E4%BD%93%E6%B0%B8%E7%94%9F.html>2025-04-15 用 CLIPS 模拟生态第0步：单体永生</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%A6%82%E4%BD%95%E9%80%9A%E8%BF%87%E7%B3%BB%E7%BB%9F%E5%8C%96%E7%BB%83%E4%B9%A0%E6%8E%8C%E6%8F%A1%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%EF%BC%9F.html>2025-04-13 价格行为学 - 如何通过系统化练习掌握价格行为交易？</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20Measured%20Moves%28%E7%A7%BB%E5%8A%A8%E6%B5%8B%E9%87%8F%29.html>2025-04-12 价格行为学 - Measured Moves(移动测量)</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E5%90%AC%E8%A7%81%20FCS%20%E7%9A%84%E5%A3%B0%E9%9F%B3%20FCS%20%E5%9F%BA%E9%87%91%E4%BC%9A%E7%AC%AC%2034%20%E6%9C%9F%E7%94%B5%E5%AD%90%E9%80%9A%E8%AE%AF.html>2025-04-12 听见 FCS 的声音 FCS 基金会第 34 期电子通讯</a></li>
+
+<li><a href=codeinchinese.com/%E6%80%8E%E4%B9%88%E6%A0%B7%E6%95%99%E8%82%B2%E5%AD%A9%E5%AD%90%E4%B8%8D%E8%B7%9F%E9%A3%8E%E4%B8%8D%E4%BB%8E%E4%BC%97%E4%B8%8D%E9%9A%8F%E5%A4%A7%E6%B5%81%EF%BC%8C%E4%B8%8D%E4%BC%9A%E8%A2%AB%E7%85%BD%E5%8A%A8%E6%83%85%E7%BB%AA%EF%BC%8C%E4%B8%8D%E4%BC%9A%E8%BD%BB%E6%98%93%E7%9B%B8%E4%BF%A1%E5%88%AB%E4%BA%BA%E8%AF%B4%E7%9A%84%E4%BB%BB%E4%BD%95%E4%BF%A1%E6%81%AF%EF%BC%8C%E5%AD%A6%E4%BC%9A%E6%9C%89%E8%87%AA%E5%B7%B1%E7%9A%84%E5%88%A4%E6%96%AD%3F.html>2025-04-12 怎么样教育孩子不跟风不从众不随大流，不会被煽动情绪，不会轻易相信别人说的任何信息，学会有自己的判断?</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E4%BB%8E%E8%AF%95%E9%94%99%E5%88%B0%E7%A8%B3%E5%81%A5%E7%9A%84%E5%AE%B6%E5%BA%AD%E7%90%86%E8%B4%A2%E5%AE%9E%E5%BD%95.html>2025-04-11 从试错到稳健的家庭理财实录</a></li>
 
@@ -64,6 +82,8 @@
 <li><a href=blog.forecho.com/%E4%BD%BF%E7%94%A8%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%E4%BA%A4%E6%98%93%E7%8A%AF%E7%9A%84%E9%94%99%E8%AF%AF.html>2025-04-03 使用价格行为学交易犯的错误</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202513%20%E5%85%A8%E5%AE%B6%E6%BB%91%E9%9B%AA%20%E6%91%94%E8%B7%A4%E6%AF%94%E6%88%90%E5%8A%9F%E6%9B%B4%E7%8F%8D%E8%B4%B5.html>2025-04-03 父范学堂 2513 全家滑雪 摔跤比成功更珍贵</a></li>
+
+<li><a href=codeinchinese.com/1954%E5%B9%B4%E3%80%8AMathematics%20and%20Plausible%20Reasoning%E3%80%8B%E2%80%9C%E5%AF%B9%E6%95%99%E5%B8%88%E7%9A%84%E8%AF%9D%E2%80%9D%E6%91%98%E5%BD%95.html>2025-04-02 1954年《Mathematics and Plausible Reasoning》“对教师的话”摘录</a></li>
 
 <li><a href=conge.livingwithfcs.org/%E6%8A%98%E8%BF%94%E7%82%B9%202513%20%E8%AE%AD%E7%BB%83%E7%AC%AC%E5%85%AB%E5%91%A8%20%E9%80%9F%E5%BA%A6%E8%AF%BE%E5%8F%96%E6%B6%88%E4%B8%8E20%E8%8B%B1%E9%87%8C%E8%B7%91%E5%B4%A9%E5%AE%9E%E5%BD%95.html>2025-03-31 折返点 2513 训练第八周 速度课取消与20英里跑崩实录</a></li>
 
@@ -7080,6 +7100,8 @@
 <li><a href=codeinchinese.com/%E9%80%90%E5%B8%A7%E5%90%90%E6%A7%BD%E5%8F%8D%E6%99%BA%E8%A7%86%E9%A2%91%E3%80%8A%E7%BC%96%E7%A8%8B%E8%AF%AD%E8%A8%80%E4%B8%BA%E4%BB%80%E4%B9%88%E4%B8%8D%E8%83%BD%E7%94%A8%E4%B8%AD%E6%96%87%EF%BC%8C%E8%BF%99%E7%9C%9F%E6%98%AF%E6%8A%8A%E8%80%81%E5%A4%96%E9%9A%BE%E4%BD%8F%E4%BA%86%E3%80%8B.html>2020-06-29 逐帧吐槽反智视频《编程语言为什么不能用中文，这真是把老外难住了》</a></li>
 
 <li><a href=www.barretlee.com/%E4%BB%8A%E5%A4%A9%E4%BD%A0%E6%97%A0%E6%95%88%E7%A4%BE%E4%BA%A4%E4%BA%86%E4%B9%88%EF%BC%9F.html>2020-06-28 今天你无效社交了么？</a></li>
+
+<li><a href=codeinchinese.com/%E5%AD%A6%E7%94%A8%E8%8B%B1%E8%AF%AD%E4%B8%89%E5%8D%81%E8%BD%BD%EF%BC%8C%E4%B8%8D%E5%8F%8A%E5%B9%BC%E5%84%BF%E5%9B%AD%E5%A4%A7%E7%8F%AD%E2%80%94%E2%80%94%E5%9B%BD%E5%86%85%E8%8B%B1%E8%AF%AD%E6%95%99%E5%AD%A6%E5%88%B0%E5%BA%95%E6%98%AF%E4%B8%BA%E4%BA%86%E4%BB%80%E4%B9%88%EF%BC%9F.html>2020-06-28 学用英语三十载，不及幼儿园大班——国内英语教学到底是为了什么？</a></li>
 
 <li><a href=jerkwin.github.io/%E5%88%86%E5%AD%90%E6%A8%A1%E6%8B%9F%E5%91%A8%E5%88%8A%EF%BC%9A%E7%AC%AC%2025%20%E6%9C%9F.html>2020-06-27 分子模拟周刊：第 25 期</a></li>
 
