--- a/blog.forecho.com/使用价格行为学交易犯的错误.html
+++ b/blog.forecho.com/使用价格行为学交易犯的错误.html
@@ -72,14 +72,18 @@
 <p>Al Brooks 强调使用小仓位，亏了也不特别心疼的那种（也不能用太小仓位，亏了没感觉是学不会的），特别是刚开始练习的时候，不要想着赚大钱，先想着不要亏钱。</p>
 <p>我刚开始拿 MNQ 练习就是想赚钱，但是自己能力还不行，经常亏钱，这个学费交的太贵了，后来换成 MES 之后好了一点，大概每天 100 刀左右盈亏，</p>
 <p>仓位大了，非常影响你的情绪，会导致你做出错误的操作，明明是一笔赚钱的单子，但是稍微的一点回调你就拿不住了，止损在最差的点位。</p>
+<h3>开仓不考虑盈亏比</h3>
+<p><img alt="" src="https://img.forecho.com/fFRnpp.png"/></p>
+<p>开盘一个 30 个点左右的震荡区间被突破了，差点儿达到 MM，如果在底部阳线收盘做空，期待一个第二段下跌，可以这样做，但是这是一个非常差的交易，因为盈亏比非常差。下跌的空间有限，那个时候已经有 60 多个点的波动了，已经差不多是一个日内的正常波动点位了。</p>
+<p>所以在开仓的时候，一定要考虑盈亏比，想想这里入场，我的目标位是多少？合理吗？一笔交易至少要 1:1 的盈亏比，不然就是亏钱的。</p>
 <h2>关于券商</h2>
 <h3>老虎</h3>
 <p>我刚开始用富途期货交易，但是自从体验过老虎交易期货之后才发现老虎券商非常适合价格行为学交易，主要优势有：</p>
-<p><img alt="" src="https://img.forecho.com/maeNEF.png"/></p>
+<p><img alt="" src="https://img.forecho.com/HYqQj1.png"/></p>
 <ul>
 <li>迷你期货免佣金，买卖 1 手共 3u，比富途便宜 2u</li>
 <li>日内期货不过夜有保证金优惠，MES 只需要 800 多美金，富途需要 1600 多美金</li>
-<li>PC 版闪电下单，买单和止盈止损同时一键下单，非常好用，这个富途没有</li>
+<li>使用止损单下单，添加附加订单，然后选止盈金额和止损金额，就可以非常方便的下单之后挂号止盈和止损单了，也不用自己算止盈和止损点位。真是方便。</li>
 <li>划线交易，止损和止盈可以靠拖动划线来修改，非常方便，这个富途也没有</li>
 </ul>
 <p>专属开户链接：<a href="https://tigr.link/5FQAzo">https://tigr.link/5FQAzo</a></p>
