--- a/codeinchinese.com/「小、初、高的教材停滞不前」这种说法准确吗？你的判断依据是什么？.html
+++ b/codeinchinese.com/「小、初、高的教材停滞不前」这种说法准确吗？你的判断依据是什么？.html
@@ -5,3 +5,6 @@
 <p>举个例子，以航天航空为大背景，以建设月球地面站为主题，使用基础数学、物理等解决简化的选址、路径选择、紧急避险等等问题，完全可以用于小学初中的知识串讲。</p>
 <p>语文也可将实用部分加入其中，比如应用文、报告和诗歌写作等等。</p>
 <p>何必等靠要？全国几千万家长群策群力，假以时日，必能产生充满活力的教育素材项目。</p>
+<p><a href="https://www.zhihu.com/question/1892724977742095245/answer/1903726444485547917">https://www.zhihu.com/question/1892724977742095245/answer/1903726444485547917</a></p>
+<p>引用最后一句</p>
+<p>另外，因材施教，因地制宜。</p>
