--- a/blog.forecho.com/价格行为学 - 市场周期.html
+++ b/blog.forecho.com/价格行为学 - 市场周期.html
@@ -87,6 +87,8 @@
 <li>在小级别的时间周期上，存在震荡区间。</li>
 <li>宽通道是弱趋势，有 75% 的概率被反向突破测试通道起点。</li>
 </ul>
+<p><img alt="" src="https://img.forecho.com/gVtXHJ.png"/></p>
+<p>上图也是宽通道，区别通道还是宽还是窄通道，就看 k 线是否有重叠，如果 k 线之间有大量的重叠就是宽通道。</p>
 <p>使用原则：</p>
 <ul>
 <li>新手在上涨趋势中，选择只做多，即选择回调买入。在下跌趋势中，选择只做空。即选择在高点卖出。</li>
@@ -127,6 +129,7 @@
 </ul>
 <p>更多详情介绍请看 <a href="https://blog.forecho.com/price-actions-trading-range.html">《价格行为学 - 震荡区间》</a> 这篇文章。</p>
 <h3>交易方式</h3>
+<p><img alt="" src="https://img.forecho.com/ZQMS9v.png"/></p>
 <p>每个趋势都是从一个突破开始，然后进去通道，再然后进入震荡区间。如此反复。在趋势行情中我们要跟随趋势交易，在震荡区间中我们要高抛低吸。</p>
 <p>震荡行情比较难做，因为真突破之后可能会导致你大亏，之前小赚的几笔，一次亏完。所以新手要多去做趋势行情，有了经验之后再考虑做震荡行情的剥头皮交易。</p>
 <h2>二元决策</h2>
