--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8938 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8946 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=mabbs.github.io/%E8%BF%91%E6%9C%9F%E5%AF%B9%E5%8D%9A%E5%AE%A2%E7%9A%84%E4%BF%AE%E6%94%B9%E4%B8%8E%E4%BC%98%E5%8C%96%E8%AE%B0%E5%BD%95.html>2025-06-02 近期对博客的修改与优化记录</a></li>
+
+<li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E7%94%A8100%E5%A4%A9%E5%BD%BB%E5%BA%95%E6%8E%8C%E6%8F%A1%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C%EF%BC%9F%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C100%E8%AE%B2.html>2025-05-22 如何用100天彻底掌握卡片创作？卡片创作100讲</a></li>
 
 <li><a href=f2h2h1.github.io/socket%E7%BC%96%E7%A8%8B.html>2025-05-21 socket编程</a></li>
 
@@ -21,9 +25,15 @@
 
 <li><a href=yuanj.top/%E6%9C%88%E5%88%8A%20vol.2%EF%BC%9A%E7%94%9F%E5%91%BD%E7%9A%84%E4%B8%A4%E9%9D%A2%E9%95%9C.html>2025-05-19 月刊 vol.2：生命的两面镜</a></li>
 
+<li><a href=codeinchinese.com/%E9%99%B6%E5%93%B2%E8%BD%A9%E7%9A%84%E4%B8%8D%E7%AD%89%E5%BC%8F%E8%AF%81%E6%98%8E%E5%B7%A5%E5%85%B7%E5%BD%93%E5%89%8D%E7%89%88%E6%8E%A2%E7%A9%B6.html>2025-05-17 陶哲轩的不等式证明工具当前版探究</a></li>
+
 <li><a href=www.zhaohuabing.com/Fixing%20High%20CPU%20Usage%20in%20VS%20Code.html>2025-05-16 Fixing High CPU Usage in VS Code</a></li>
 
+<li><a href=codeinchinese.com/%E9%99%B6%E5%93%B2%E8%BD%A9%E7%9A%84%E4%B8%8D%E7%AD%89%E5%BC%8F%E8%AF%81%E6%98%8E%E5%B7%A5%E5%85%B7%E6%8E%A2%E7%A9%B6%E7%AC%AC1%E7%89%88%EF%BC%88%E4%B8%8B%EF%BC%89.html>2025-05-15 陶哲轩的不等式证明工具探究第1版（下）</a></li>
+
 <li><a href=conge.livingwithfcs.org/%E7%88%B6%E8%8C%83%E5%AD%A6%E5%A0%82%202519%20%E5%BD%A9%E5%B8%A6%E9%97%A8%E5%B8%98%EF%BC%8C%E8%98%91%E8%8F%87%E4%B8%8E%E6%91%A9%E5%A4%A9%E8%BD%AE.html>2025-05-14 父范学堂 2519 彩带门帘，蘑菇与摩天轮</a></li>
+
+<li><a href=codeinchinese.com/%E9%99%B6%E5%93%B2%E8%BD%A9%E7%9A%84%E4%B8%8D%E7%AD%89%E5%BC%8F%E8%AF%81%E6%98%8E%E5%B7%A5%E5%85%B7%E6%8E%A2%E7%A9%B6%E7%AC%AC1%E7%89%88%EF%BC%88%E4%B8%8A%EF%BC%89.html>2025-05-14 陶哲轩的不等式证明工具探究第1版（上）</a></li>
 
 <li><a href=sund.site/%E8%AF%BB%E5%AE%8C%E8%BF%99%E6%9C%AC%E4%B9%A6%EF%BC%8C%E6%B2%9F%E9%80%9A%E5%B0%86%E6%98%AF%E4%B8%80%E4%B8%AA%E6%9C%89%E8%BF%B9%E5%8F%AF%E5%BE%AA%E7%9A%84%E8%BF%87%E7%A8%8B.html>2025-05-13 读完这本书，沟通将是一个有迹可循的过程</a></li>
 
@@ -31,9 +41,13 @@
 
 <li><a href=babyno.top/Windows%E5%85%B3%E6%9C%BA%E8%87%AA%E5%8A%A8%E9%87%8D%E5%90%AF.html>2025-05-12 Windows关机自动重启</a></li>
 
+<li><a href=codeinchinese.com/%E9%99%B6%E5%93%B2%E8%BD%A9%E7%9A%84%E4%B8%8D%E7%AD%89%E5%BC%8F%E8%AF%81%E6%98%8E%E5%B7%A5%E5%85%B7%E6%8E%A2%E7%A9%B6%E7%AC%AC0%E7%89%88.html>2025-05-12 陶哲轩的不等式证明工具探究第0版</a></li>
+
 <li><a href=www.zhaohuabing.com/Envoy%20Gateway%20Architecture%20Diagrams.html>2025-05-12 Envoy Gateway Architecture Diagrams</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%A6%82%E4%BD%95%E4%BD%BF%E7%94%A8%E9%99%90%E4%BB%B7%E8%AE%A2%E5%8D%95%E7%BB%93%E5%90%88%E5%96%87%E5%8F%AD%E5%BD%A2%E6%80%81%E8%8E%B7%E5%88%A9.html>2025-05-10 价格行为学 - 如何使用限价订单结合喇叭形态获利</a></li>
+
+<li><a href=codeinchinese.com/%E3%80%8ADesigning%20Bots%E3%80%8B%E8%AF%BB%E4%B9%A6%E9%80%89%E6%91%98%EF%BC%88%E4%B8%80%EF%BC%89%E2%80%94%E2%80%94AI%E3%80%81%E5%AE%B9%E9%94%99%E7%AD%89.html>2025-05-10 《Designing Bots》读书选摘（一）——AI、容错等</a></li>
 
 <li><a href=sakurawald.github.io/fix-window-tearing-in-high-monitor-refresh-rate.html>2025-05-09 fix-window-tearing-in-high-monitor-refresh-rate</a></li>
 
@@ -56,6 +70,8 @@
 <li><a href=sund.site/Go%E6%9C%8D%E5%8A%A1%E7%AB%AF%E6%80%A7%E8%83%BD%E7%9A%84%E4%B8%80%E8%88%AC%E8%A7%A3%E5%86%B3%E6%80%9D%E8%B7%AF.html>2025-05-06 Go服务端性能的一般解决思路</a></li>
 
 <li><a href=sakurawald.github.io/fix-screen-brightness-too-low.html>2025-05-05 fix-screen-brightness-too-low</a></li>
+
+<li><a href=codeinchinese.com/CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%810.5%EF%BC%9A%E6%B1%82%E6%9C%80%E8%BF%91%EF%BC%9B%E5%8F%96%E5%B1%9E%E6%80%A7%E3%80%81%E6%9F%A5%E4%BA%8B%E5%AE%9E%E7%AD%89%E5%87%BD%E6%95%B0.html>2025-05-05 CLIPS 模拟生态0.5：求最近；取属性、查事实等函数</a></li>
 
 <li><a href=shiina18.github.io/%E9%9A%BE%E5%80%92%E5%90%84%E8%B7%AF%E5%A4%A7%E6%A8%A1%E5%9E%8B%E7%9A%84%E4%B8%A4%E9%81%93%E7%AE%80%E5%8D%95%20SQLite%20%E9%97%AE%E9%A2%98.html>2025-05-05 难倒各路大模型的两道简单 SQLite 问题</a></li>
 
