--- a/aemoncao.github.io/榨干这台 NAS 第 005 话-外网访问之 Tailscale.html
+++ b/aemoncao.github.io/榨干这台 NAS 第 005 话-外网访问之 Tailscale.html
@@ -2,7 +2,7 @@
 <p>这是一系列关于 NAS 的文章，系列的名称你们也看到了：「<strong>榨干这台 NAS</strong>」。我将尽可能详细的介绍 NAS 相关的知识，帮助你最大限度的发挥你的手中 NAS 的威力！</p>
 &lt;!-- more --&gt;
 
-<p>许久不见，托更了快两年，今天继续来填坑。</p>
+<p>许久不见，拖更了快两年，今天继续来填坑。</p>
 <p>今天我们暂时先不捣鼓 PT、影视、下载那些问题了，我们来解决一个更加基础的问题：<strong>外网访问</strong>。</p>
 <p>家用 NAS 作为家庭存储的设备，绝大多数场景是在家中使用的，但是有时候我们需要在外面访问家中的 NAS，比如在外面需要访问家中的文件、下载文件到家中的 NAS 等等。那么，如何实现外网访问呢？</p>
 <p>目前主流的方式有以下几种：</p>
