--- a/index.html
+++ b/index.html
@@ -6,14 +6,18 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 53 个博客、8946 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 53 个博客、8949 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
 
+<li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E5%88%A4%E6%96%AD%E4%BD%A0%E7%9C%9F%E6%AD%A3%E6%8B%A5%E6%9C%89%E4%BA%86%E4%B8%AA%E4%BA%BA%E7%94%9F%E4%BA%A7%E5%8A%9B%EF%BC%9F.html>2025-06-10 如何判断你真正拥有了个人生产力？</a></li>
+
 <li><a href=mabbs.github.io/%E8%BF%91%E6%9C%9F%E5%AF%B9%E5%8D%9A%E5%AE%A2%E7%9A%84%E4%BF%AE%E6%94%B9%E4%B8%8E%E4%BC%98%E5%8C%96%E8%AE%B0%E5%BD%95.html>2025-06-02 近期对博客的修改与优化记录</a></li>
+
+<li><a href=aemoncao.github.io/%E6%A6%A8%E5%B9%B2%E8%BF%99%E5%8F%B0NAS%E7%AC%AC006%E8%AF%9D-%E5%85%B3%E4%BA%8E%E5%A4%87%E4%BB%BD.html>2025-05-30 榨干这台NAS第006话-关于备份</a></li>
 
 <li><a href=www.cnfeat.com/%E5%A6%82%E4%BD%95%E7%94%A8100%E5%A4%A9%E5%BD%BB%E5%BA%95%E6%8E%8C%E6%8F%A1%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C%EF%BC%9F%E5%8D%A1%E7%89%87%E5%88%9B%E4%BD%9C100%E8%AE%B2.html>2025-05-22 如何用100天彻底掌握卡片创作？卡片创作100讲</a></li>
 
@@ -136,6 +140,8 @@
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E8%B6%8B%E5%8A%BF.html>2025-04-15 价格行为学 - 趋势</a></li>
 
 <li><a href=codeinchinese.com/%E7%94%A8%20CLIPS%20%E6%A8%A1%E6%8B%9F%E7%94%9F%E6%80%81%E7%AC%AC0%E6%AD%A5%EF%BC%9A%E5%8D%95%E4%BD%93%E6%B0%B8%E7%94%9F.html>2025-04-15 用 CLIPS 模拟生态第0步：单体永生</a></li>
+
+<li><a href=gitee.com/MulanRevive/bounty/%E9%A1%B9%E7%9B%AE%E4%BB%8B%E7%BB%8D.html>2025-04-15 项目介绍</a></li>
 
 <li><a href=blog.forecho.com/%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E5%AD%A6%20-%20%E5%A6%82%E4%BD%95%E9%80%9A%E8%BF%87%E7%B3%BB%E7%BB%9F%E5%8C%96%E7%BB%83%E4%B9%A0%E6%8E%8C%E6%8F%A1%E4%BB%B7%E6%A0%BC%E8%A1%8C%E4%B8%BA%E4%BA%A4%E6%98%93%EF%BC%9F.html>2025-04-13 价格行为学 - 如何通过系统化练习掌握价格行为交易？</a></li>
 
