--- a/aemoncao.github.io/榨干这台 NAS 第 000 话-目录结构.html
+++ b/aemoncao.github.io/榨干这台 NAS 第 000 话-目录结构.html
@@ -178,6 +178,10 @@
 </li>
 </ol>
 <p>请大家<strong>务必</strong>重视备份的重要性，不然等到数据丢失的时候，是无论如何也无法挽救的。</p>
+<p>系列相关文章：</p>
+<ol>
+<li>{% post_link 榨干这台NAS第006话-关于备份 %}</li>
+</ol>
 <pre><code class="lang-text">root
 ├── backup
 │   ├── bitwarden_backup
